# Software-Engineering

./: README.md
task1/: README.md  workspace.dsl
task2/: DockerFile  README.md  docker-compose.yml  openApi.yaml
task2/some-service/: CMakeLists.txt  Makefile  README.md
task2/some-service/.devcontainer/: devcontainer.json
task2/some-service/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  jwt_utils.cpp  jwt_utils.h  main.cpp
task2_success/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
task2_success/.devcontainer/: devcontainer.json
task2_success/src/: main.cpp
task2_success/src/controller/: goals_add_handler.h  goals_get_all_handler.h  user_find_by_full_name_handler.h  user_find_by_login_handler.h  users_add_handler_auth.h
task2_success/src/database/: goalBD.h
task2_success/src/handler/: router_factory.h
task2_success/src/service/: goals_service.h  users_service.h
task3/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
task3/.devcontainer/: devcontainer.json
task3/postgres-data/: empty.txt
task3/src/: main.cpp
task3/src/controller/: goals_add_handler.h  not_found_handler.h  swagger_handler.h  user_find_by_login_handler.h
task3/src/database/: Database.h  usersBD.h
task3/src/service/: goals_service.h  users_service.h
task4/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
task4/mongodb_for_bd/: data.js  queries.js  schema_design.md  validation.js
task4/sql_for_bd/: data.sql  optimization.md  queries.sql  schema.sql
task4/src/: main.cpp
(+28 files in other folders)
